syntax = "proto3";

package github.com.darialissi.msa_big_tech.social;

import "buf/validate/validate.proto";

option go_package = "github.com/darialissi/msa_big_tech/social/pkg;social";


// Отправление запроса "В Друзья"
message SendFriendRequestRequest {
  string user_id = 1 [
    (buf.validate.field).required = true
  ];
}

message SendFriendRequestResponse {
  FriendRequest friend_request = 1;
}

// Получение списка входящих запросов
message ListFriendRequestsRequest {
  string user_id = 1 [
    (buf.validate.field).required = true
  ];
}

message ListFriendRequestsResponse {
  repeated FriendRequest friend_requests = 1;
}

// Принятие заявки
message AcceptFriendRequestRequest {
  string friend_request_id = 1 [
    (buf.validate.field).required = true
  ];
}

message AcceptFriendRequestResponse {
  FriendRequest friend_request = 1;
}

// Отклонение заявки
message DeclineFriendRequestRequest {
  string friend_request_id = 1 [
    (buf.validate.field).required = true
  ];
}

message DeclineFriendRequestResponse {
  FriendRequest friend_request = 1;
}

// Удаление из "Друзей"
message RemoveFriendRequest {
  string friend_id = 1 [
    (buf.validate.field).required = true
  ];
}

message RemoveFriendResponse {
  UserFriend pair = 1;
}

// Получение списка "Друзей"
message ListFriendsRequest {
  string user_id = 1 [
    (buf.validate.field).required = true
  ];
  uint64 limit = 2;
  string cursor = 3;
}

message ListFriendsResponse {
  repeated UserFriend pairs = 1;
  string next_cursor = 2;
}

// Объекты
message FriendRequest {
  string request_id = 1;
  string status = 2;
  string from_user_id = 3;
  string to_user_id = 4;
}

message UserFriend {
  string user_id = 1;
  string friend_id = 2;
  string created_at = 3;
}